--- a/week3/css/FAQ.scss
+++ b/week3/css/FAQ.scss
@@ -1,6 +1,6 @@
 .FAQ-banner{
     height: 304px;
-    background-image: url('/images/week4/72@2x.png');
+    background-image: url('../images/week4/72@2x.png');
     background-size: cover;
     background-position:  center;
     display: flex;
@@ -57,7 +57,7 @@
         height: 24px;
         background-size: cover;
         background-position: center center;
-        background-image: url("/images/week4/ic_keyboard_arrow_down_24px.svg");
+        background-image: url("../images/week4/ic_keyboard_arrow_down_24px.svg");
         position: absolute;
         right: 16px;
         top: 24px;
